--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
         <groupId>com.mt</groupId>
 	<artifactId>maven-web-application</artifactId>
 	<packaging>war</packaging>
-	<version>3.1.9-RELEASE</version>
+	<version>3.2.9-SNAPSHOT</version>
 	
 	<name>maven-web-application</name>
 
@@ -98,13 +98,13 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>SK Technologies Releases Nexus Repository</name>
-	      <url>http://13.233.224.254:8081/repository/kai-release/</url>
+	      <url>http://13.233.224.254:8081/repository/ashok-release/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>SK Technologies Snapshot Nexus Repository </name>
-	      <url>http://13.233.224.254:8081/repository/kai-snapshot/</url>
+	      <url>http://13.233.224.254:8081/repository/ashok-snapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
