--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
         <groupId>com.mt</groupId>
 	<artifactId>maven-web-application</artifactId>
 	<packaging>war</packaging>
-	<version>3.2.9-SNAPSHOT</version>
+	<version>3.2.9-RELEASE</version>
 	
 	<name>maven-web-application</name>
 
