--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
         <groupId>com.mt</groupId>
 	<artifactId>maven-web-application</artifactId>
 	<packaging>war</packaging>
-	<version>3.0.1-SNAPSHOT</version>
+	<version>3.0.2-RELEASE</version>
 	
 	<name>maven-web-application</name>
 
@@ -98,13 +98,13 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>SK Technologies Releases Nexus Repository</name>
-	      <url>http://13.235.51.10:8081/repository/nexus-release/</url>
+	      <url>http://52.66.212.166:8081/repository/nexus-release/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>SK Technologies Snapshot Nexus Repository </name>
-	      <url>http://13.235.51.10:8081/repository/nexus-snapshot/</url>
+	      <url>http://52.66.212.166:8081/repository/nexus-snapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
